fix: functional keys

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 
 body {
-    width: auto;
+    width: 920px;
     height: auto;
 }
 
@@ -33,3 +33,6 @@ textarea {
     width: 500px;
     height: 100px;
 }
+
+
+
