--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 
 body {
-    width: 920px;
+    width: 990px;
     height: auto;
 }
 
@@ -10,19 +10,24 @@ body {
     height: auto;
     display: flex;
     flex-direction: row;
-   
+    padding: 20px 30px 20px 30px;
+    background-color: bisque;
     flex-wrap: wrap;
     gap:6px;
     
 }
 
 .button {
+    display: flex;
    text-align: center;
-   justify-content: center;
     background-color: aqua;
     width: 60px;
-    height: 30px;
-}
+    height: 35px;
+    align-items: center;
+    justify-content: center;
+    }
+
+  
 
 .active{
     background-color:blueviolet;
