--- a/style.css
+++ b/style.css
@@ -1,21 +1,29 @@
 
 
 body {
-    width: 1010px;
-    height: auto;
+    width: auto;
+}
+
+body>div {
+    display: flex;
+    margin: auto;
+    margin-top: 200px;
+    margin-bottom: 20px;
 }
 
 .wrapper {
-    width: auto;
+    margin: auto;
+    width: 945px;
     height: auto;
     display: flex;
     flex-direction: row;
-    padding: 20px 30px 20px 30px;
+    padding: 20px 20px 20px 20px;
     background-color: bisque;
     flex-wrap: wrap;
     gap:8px;
+    }
+
     
-}
 
 .button {
     display: flex;
@@ -37,9 +45,10 @@ body {
 }
 
 textarea {
+    font-size: 20px;
     margin: auto;
-    width: 500px;
-    height: 100px;
+    width: 600px;
+    height: 150px;
 }
 
 
