--- a/style.css
+++ b/style.css
@@ -64,8 +64,8 @@ textarea {
 
 .shortcut {
     font-size: 30px;
-    margin: 0;
-    margin-left: 500px;
+    margin: auto;
+
     background-color: aquamarine;
     width: 105px;
 }
